# CS_367

./: .gitignore  .gitmodules  README  README.md
Animation/: README
Animation/src/: Arm.cpp  Arm.h  CMakeLists.txt  Cylinder.cc  Cylinder.h  Model.cc  Model.h  Wheel.cc  Wheel.h  animation.cc
CoordFrames/: README
CoordFrames/src/: CMakeLists.txt  CoordFrame.cpp  CoordFrame.h  Rotation.cpp  Rotation.h  Transformation.cpp  Transformation.h  Translation.cpp  Translation.h  main.cpp
GLPrimitives/: .cproject  .project  README  main.cpp  quadrings.dxf
GLPrimitives/src/: CMakeLists.txt  main.cpp
Lighting/: README
Lighting/src/: CMakeLists.txt  main.cpp
Shaders/src/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp  vshader.vs
Transformation-qt3/: Doxyfile  GLPanel.cpp  GLPanel.h  GLTransform.cpp  GLTransform.h  GUI.cpp  GUI.h  README  Transformation.pro  main.cpp  moc_GLPanel.cpp  moc_GUI.cpp  moc_myForm.cpp  myForm.cpp  myForm.h  myForm.ui
notes/: 2013_01_08.txt  2013_01_09.txt
projects/notes/: 2013_01_10.txt
projects/project_1/src/: Bowling.java  BowlingAWT.java  Driver.java
projects/project_2/: README.md
projects/project_2/src/: Blarg.java  Chairs.java  Driver.java  FerrisWheel.java  FerrisWheelCanvas.java  Frame.java  MatrixHelper.java  Wheel.java  Yoyo.java  YoyoAnimation.java
projects/project_3/: AndroidManifest.xml  Wheel_Reviews.fbx.txt  build.xml  local.properties
projects/project_3/Wheel_Reviews.3DS/: readme.txt  wheel_reviews.mtl
projects/project_3/res/layout/: main.xml
projects/project_3/res/values/: strings.xml
projects/project_3/src/com/example/project_3/: Cylinder.java  Drawable.java  FerrisWheel.java  GLRenderer.java  GraphicsActivity.java  MeshObject.java  OffScanner.java  TransformationParams.java
